--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,8 +6,6 @@ WORKDIR /app
 
 COPY  . .
 
-# RUN chmod +x setup.sh
+RUN [ -e "node_modules" ] && echo "node_modules exists" || npm install
 
-# ENTRYPOINT [ "sh","setup.sh" ]
-
-CMD [ "sh", "setup.sh" ]
+ENTRYPOINT [ "npm", "start" ]
